--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Mike Chan's Tech Blog
+title: Mike's Code
 subtitle: 
 description: >- # this means to ignore newlines until "baseurl:"
 author: Mike Chan
-email: 
+email: mikekitckchan@gmail.com
 avatar: assets/images/avatar.jpg
 
 # You'll want to customize url and baseurl for your own site:
