--- a/_config.yml
+++ b/_config.yml
@@ -58,4 +58,6 @@ google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
 remote_theme: chrisbobbe/jekyll-theme-prologue
-collections: [sections]
+collections: 
+  bootstrapposts:
+    output: true
