--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,4 @@ google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
 remote_theme: chrisbobbe/jekyll-theme-prologue
-collections: 
-  bootstrapposts:
-    output: true
+collections: [sections]
