--- a/_config.yml
+++ b/_config.yml
@@ -38,8 +38,20 @@ email: mikekitckchan@gmail.com
 avatar: assets/images/avatar.jpg
 
 # You'll want to customize url and baseurl for your own site:
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+baseurl: ""
+url=""
+exclude: 
+permalink: pretty
+
+# Conversion
+markdown: kramdown
+highlighter: rouge
+kramdown:
+  input: GFM
+  hard_wrap: false
+  syntax_highlighter: rouge
+  extensions: fenced_code_blocks
+
 
 # Social settings
 # Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
